# elevator-ratatui

./: Cargo.toml  README.md
src/: app.rs  app_layout.rs  app_own_event.rs  conversation.rs  elevator_infra.rs  elevator_installation.rs  event.rs  handler.rs  machinery.rs  main.rs  tui.rs  tui_actor.rs  tui_layout.rs  ui.rs
src/conversation/: vocabulary.rs
src/elevator_installation/: carriage_internal.rs  carriage_machinery.rs  elevator_operations.rs  elevator_service.rs  pulley_machinery.rs
