[package]
name = "tui-moving-box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tui = "0.16"

ratatui = { version = "0.26.1", features = ["unstable-widget-ref"] }
clearscreen = "2.0.1"
figlet-rs = "0.1.5"
tui-input = "0.8.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
futures = "0.3.28"
signal-hook = "0.3.17"

rust-fsm = "0.6.1"
colored = "2.0.4"
ractor = { version = "0.9", features = ["cluster"] }
ractor_cluster = "0.9"

async-trait = "0.1"
clap = { version = "4", features = ["derive"] } 
env_logger = "0.11.2"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "std"] }
assertx = "1.1.7"
rand = "0.8"
array-init = "2.1.0"



